# parcels

./: .cspell.config.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  compare.ipynb  environment.yml  environment_py3_linux.yml  environment_py3_osx.yml  environment_py3_win.yml  monkeytype-modules.txt  monkeytype-parcels.sh  pixi.toml  pyproject.toml  setup.cfg
.github/ci/: recipe.yaml
.github/scripts/: linux_integrationtest.sh  linux_unittest.sh  osx_integrationtest.sh  osx_unittest.sh  windows_integrationtest.bat  windows_unittest.bat
.github/workflows/: additional.yml  ci-workflow-integrationtests.yml  ci-workflow-unittests.yml  ci.yml  pypi-release.yml  test.yml  typechecking.yml
ci/scripts/: download-all-tutorial-datasets.py
docs/: Makefile  conf.py
docs/community/: contributing.rst
docs/development/: index.md  maintainer.md  policies.md  posting-issues.md
docs/examples/: documentation_LargeRunsOutput.py  documentation_MPI.py  documentation_advanced_zarr.py  documentation_geospatial.py  documentation_homepage_animation.py  documentation_indexing.py  documentation_stuck_particles.py  documentation_unstuck_Agrid.py  fs_from_das.py  parcels_tutorial.py  tutorial_Argofloats.py  tutorial_NestedFields.py  tutorial_analyticaladvection.py  tutorial_croco_3D.py  tutorial_delaystart.py  tutorial_diffusion.py  tutorial_interaction.py  tutorial_interpolation.py  tutorial_jit_vs_scipy.py  tutorial_kernelloop.py  tutorial_nemo_3D.py  tutorial_nemo_curvilinear.py  tutorial_output.py  tutorial_parcels_structure.py  tutorial_particle_field_interaction.py  tutorial_peninsula_AvsCgrid.py  tutorial_periodic_boundaries.py  tutorial_sampling.py  tutorial_timestamps.py  tutorial_timevaryingdepthdimensions.py  tutorial_unitconverters.py
docs/getting_started/: explanation_concepts.md  installation.md  tutorial_output.ipynb  tutorial_quickstart.md
docs/superpowers/plans/: 2026-04-08-particlefile-refactor.md
docs/superpowers/specs/: 2026-04-08-particlefile-refactor-design.md
docs/user_guide/: index.md  v4-migration.md
docs/user_guide/examples/: explanation_kernelloop.md  tutorial_Argofloats.ipynb  tutorial_croco_3D.ipynb  tutorial_delaystart.ipynb  tutorial_diffusion.ipynb  tutorial_dt_integrators.ipynb  tutorial_fesom.ipynb  tutorial_interaction.ipynb  tutorial_manipulating_field_data.ipynb  tutorial_mitgcm.ipynb  tutorial_nemo.ipynb  tutorial_nestedgrids.ipynb  tutorial_sampling.ipynb  tutorial_schism.ipynb  tutorial_write_in_kernel.ipynb
docs/user_guide/examples_v3/: tutorial_peninsula_AvsCgrid.ipynb
parcels/: field.py  fieldset.py  kernel.py  particledata.py  particlefile.py  particleset.py
parcels/_datasets/structured/: generic.py
parcels/collection/: collectionaos.py  collectionsoa.py
parcels/compilation/: codecompiler.py  codegenerator.py
parcels/interaction/: baseinteractionkernel.py  interactionkernelsoa.py
parcels/kernel/: basekernel.py  kernelaos.py  kernelsoa.py
parcels/particlefile/: baseparticlefile.py
parcels/particleset/: particlesetaos.py  particlesetsoa.py
parcels/tools/: converters.py  global_statics.py  timer.py
scripts/: fetch-docs.py
src/parcels/: __init__.py  _python.py  _reprs.py  _typing.py  _xarray.py  convert.py
src/parcels/_core/: basegrid.py  field.py  fieldset.py  index_search.py  kernel.py  model.py  particle.py  particlefile.py  particleset.py  particlesetview.py  xgrid.py
src/parcels/_core/utils/: sgrid.py  time.py
src/parcels/_datasets/: remote.py  utils.py
src/parcels/_datasets/structured/: generated.py  generic.py  strategies.py
src/parcels/_datasets/unstructured/: generated.py
src/parcels/_sgrid/: __init__.py  accessor.py  core.py
src/parcels/_strategies/: __init__.py  sgrid.py  time.py
src/parcels/interpolators/: __init__.py  _base.py  _uxinterpolators.py  _xinterpolators.py
tests/: conftest.py  test_advection.py  test_convert.py  test_datasets.py  test_deprecations.py  test_diffusion.py  test_field.py  test_fieldset.py  test_index_search.py  test_interpolation.py  test_kernel.py  test_mpirun.py  test_particle.py  test_particlefile.py  test_particleset.py  test_particleset_execute.py  test_particlesetview.py  test_sigmagrids.py  test_spatialhash.py  test_utils.py  test_uxadvection.py  test_uxarray_fieldset.py  test_xarray.py  test_xgrid.py  utils.py  uxvalidation.py
tests-v3/: test_kernel_language.py  test_particlesets.py
tests/datasets/: test_remote.py  test_strategies.py  test_structured.py  test_utils.py
tests/sgrid/: test_accessor.py  test_sgrid.py
tests/strategies/: __init__.py
tests/utils/: test_sgrid.py  test_time.py
tests/validation/: test_ux.py
tools/: numpydoc_lint.py
